--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
     if: 'success() && ${{ needs.prepare.outputs.is-release }}'
     environment:
       name: 'pypi'
-      url: 'https://pypi.org/p/atsphinx-atsphinx-qrcode'
+      url: 'https://pypi.org/p/atsphinx-qrcode'
     permissions:
       id-token: write
     steps:
@@ -70,7 +70,9 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - uses: actions/checkout@v4
-      - uses: jdx/mise-action@v2
+      - uses: aquaproj/aqua-installer@9ebf656952a20c45a5d66606f083ff34f58b8ce0 # v4.0.0
+        with:
+          aqua_version: v2.43.1
       - name: Build document
         run: |
           task --yes setup docs:build-mini18n-dirhtml
