--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "atsphinx-qrcode"
 version = "0.1.0"
-description = "Render QRCode image on Sphinx document."
+description = "Render QR code image on Sphinx document."
 authors = [{name = "Kazuya Takei", email = "myself@attakei.net"}]
 license = "Apache-2.0"
 requires-python = ">= 3.9"
